--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -48,7 +48,7 @@ Let's create some missing plots to see some partterns of the "avengers" data set
 library(tidyverse)
 library(patchwork)
 source("plot_missing.R")
-plot_missing(avengers, percent = FALSE, mode = 4)
+plot_missing(avengers, percent = FALSE)
 ```
 
 Now we observed some missing patterns.
